css/styles.css
/* General */

.container { 
	padding: 25px;
}

.section-content {
	margin-bottom: 20px;
}

.section-content .heading{ 
	color: #777;
	background-color: #FFFFFF;
	margin-bottom: 30px; 
}

.section-content .heading:before{ content:''; height: 10px; width: 50px; border-radius: 5px;
margin-bottom: 20px; display: block; background: #aaf0d1; }

.margin-t-10{ margin-top: 10px; }


.font-yellow{ color: #81b398; }

.font-semi-white{ color: #ddd; }

.font-lite-black{ color: #999; }

html{ font-size: 100%; height: 100%; overflow-x: hidden; margin: 0px;  padding: 0px; touch-action: manipulation; }


body{ font-size: 16px; font-family: 'Poppins', sans-serif; width: 100%; height: 100%; margin: 0; font-weight: 400;
-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; word-wrap: break-word;
color: #333; background: #438644; }

h1, h2, h3, h4, h5, h6, p, a, ul, span, li, img, input, button{ margin: 0; padding: 0; }

h1,h2,h3,h4,h5,h6{ line-height: 1.5; font-weight: inherit; }

h1,h2,h3{ font-family: 'Poppins', cursive; }

p{ line-height: 1.6; font-size: 1.05em; font-weight: 400; color: #777; }

/* h1{ font-size: 4em; line-height: 1; } */
h1{ font-size: 2.2em; line-height: 1.1; }
h2{ font-size: 2.2em; line-height: 1.1; }
h3{ font-size: 1.8em; }
h4{ font-size: 1.3em; }
h5{ font-size: 1em; }
h6{ font-size: .9em; letter-spacing: 1px; }

a, button{ display: inline-block; text-decoration: none; color: inherit; line-height: 1;
	-webkit-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }

a:focus, a:active, a:hover,
button:focus, button:active, button:hover,
a b.light-color:hover{ text-decoration: none; color: #FFA804; }

b{ font-weight: 600; }

img{ width: 100%; }

li{ list-style: none; display: inline-block; }

span{ display: inline-block; }

button{ outline: 0; border: 0; background: none; cursor: pointer; }

.icon{ font-size: 1.1em; display: inline-block; line-height: inherit; }

[class^="icon-"]:before, [class*=" icon-"]:before{ line-height: inherit; }

b.max-bold{ font-weight: 700; }

/* End General */

/* Intro */


.btn-border-purple{ border: 1px solid #aaf0d1; color: #222; }

.btn-border-purple:hover{ background: #438644; color: #fff; }

.intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0;
right: 0; background: rgba(0,0,0, .2); background-image:url("../imgs/cmu.jpg");
background-size: cover;}

.intro-section:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
height: 150px; z-index: -1; background: #fff; }

.intro{ padding: 0 20px; margin-top: 100px; text-align: center; background: #fff; }

.intro .profile-img{ height: 200px; width: 200px; border-radius: 100px; margin: 0 auto;
	overflow: hidden; position: relative; top: -100px; margin-bottom: -70px;  }

	.intro .information > li{ display: block; margin: 5px 0; }

	.intro .social-icons > li > a{ height: 35px; line-height: 35px; width: 35px; border-radius: 20px;
		overflow: hidden; z-index: 1; position: relative; margin: 0 5px 5px; background: #438644; color: #fff; }

		.intro .git a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
		top: 0; z-index: -1; border-radius: 20px; background: #000000;
		-webkit-transition: all .2s ease; transition: all .2s ease;
		-webkit-transform: scale(0); transform: scale(0); }

		.intro .linkedin a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
		top: 0; z-index: -1; border-radius: 20px; background: #0073b1;
		-webkit-transition: all .2s ease; transition: all .2s ease;
		-webkit-transform: scale(0); transform: scale(0); }

		.intro .mail a:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
		top: 0; z-index: -1; border-radius: 20px; background: #D44638;
		-webkit-transition: all .2s ease; transition: all .2s ease;
		-webkit-transform: scale(0); transform: scale(0); }


		.intro .social-icons > li > a:hover:after{ -webkit-transform: scale(1); transform: scale(1); }

.intro-icon {
	display: inline-block;
	*display: inline; /* for older IE */
	*zoom: 1;
	/* height: 50%; */
	width: 12%;
}

/* End Intro */

/* Projects */
.hovereffect {
	width: 100%;
	height: 100%;
	float: left;
	overflow: hidden;
	position: relative;
	text-align: center;
	cursor: default;
	border: 8px groove #aaf0d1;
}

.hovereffect .overlay {
	width: 100%;
	height: 100%;
	position: absolute;
	overflow: hidden;
	top: 0;
	left: 0;
	-webkit-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
}

.hovereffect:hover .overlay {
	background-color: rgba(48, 152, 157, 0.4);
}

.hovereffect img {
	display: block;
	position: relative;
}

.hovereffect h2 {
	color: #fff;
	text-align: center;
	position: relative;
	font-size: 17px;
	padding: 10px;
	background: rgba(0, 0, 0, 0.8);
	-webkit-transform: translateY(45px);
	-ms-transform: translateY(45px);
	transform: translateY(45px);
	-webkit-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
}

.hovereffect:hover h2 {
	background: rgba(0, 0, 0, 0.4);
	-webkit-transform: translateY(5px);
	-ms-transform: translateY(5px);
	transform: translateY(5px);
}

.hovereffect a.info {
	display: inline-block;
	text-decoration: none;
	padding: 7px 14px;
	color: #fff;
	border: 1px solid #fff;
	background-color: transparent;
	opacity: 0;
	filter: alpha(opacity=0);
	-webkit-transform: scale(0);
	-ms-transform: scale(0);
	transform: scale(0);
	-webkit-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
	/* margin: -38px 0 0 0; */
	/* padding: 62px 100px; */
	/* padding-right: 0px;
	padding-left: 0px; */
	height: 80%;
	font: 100 16px/21px 'Open sans',Helvetica,Arial,sans-serif;
}

.hovereffect:hover a.info {
	opacity: 1;
	filter: alpha(opacity=100);
	-webkit-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
}

.hovereffect a.info:hover {
	margin-top: 5%;
	box-shadow: 0 0 5px #fff;
}

.hovereffect:hover img{
	filter: blur(7px);
	-webkit-filter: blur(7px);
}

#skills{position:relative;box-shadow: 0 8px 14px 0px rgba(0,0,1,0.8);}
.skills{
	margin-top:15px;
	line-height:27px;
	margin-bottom:0px;
}
.skills .skill{
	white-space:nowrap;
	background:rgba(15,18,23,0.4);
	color:#fff;padding:3px 7px;
	border-radius:5px;
	font-size:11px;
	margin-bottom:10px;
}
.skills .skill.language{background:rgba(15,18,23,0.9)}
.job .skills .skill.language{background:#6D7583;color:#fff;}
.job .skills .skill{background:#ededed;color:#444;}

.infoText {
	text-align: left;
	margin-left: 14px;
	margin-right: 14px;
}
/* 
.hovereffect a.textlive {
	padding-bottom: 88px;
}

.hovereffect a.creamery {
	padding-bottom: 89px;
}

.hovereffect a.reddit {
	padding-bottom: 88px;
}

.hovereffect a.mahjong {
	padding-bottom: 172px;
}

.hovereffect a.fts {
	padding-bottom: 150px;
}

.hovereffect a.pkmn {
	padding-bottom: 151px;
}

.hovereffect a.stork {
	padding-bottom: 109px;
} */

.left {
	float: left;
}

.company {
	padding: 30px;
}

.proj {
	background: #6441A5;  /* fallback for old browsers */
	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
	background: white; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

	color: #fff;
}

.row {
	margin-bottom: 20px;
}

/* End Projects */

/* Divider */

.divider {
	display: flex;
	margin: 50px;
}

.circle-left {
	content: " ";
	width: 15px;
	height: 15px;
	position: relative;
	border-radius: 5px;
	border: 1px solid #abedc1;
	background-color: #6fb085;
	left: 5%;
	bottom: -10px;
}

.circle-right {
	content: " ";
	width: 15px;
	height: 15px;
	position: relative;
	border-radius: 5px;
	border: 1px solid #abedc1;
	background-color: #6fb085;
	right: 5%;
	bottom: -10px;
}

hr {
	border: 0 solid #abedc1;
	border-top-width: 1px;
	height: 0;
	clear: both;
	display: block;
	width: 45%;
	position: relative;
	transform: scale(2);
	z-index: -1;
}
hr:after {
	content: url(../imgs/classyGoose.png);
	display:block;
	position:absolute;
	left:50%;
	height:50px;
	width:50px;
	margin:-25px 0 0 -25px;
	border-radius:50px;
	overflow:hidden;
	box-shadow: 0 0 0 1px #6fb085, 0 0 5px;
}

/* End divider */


/* Experience */

.experience {
	margin-bottom: 20px;
}

.experience .list > li{ display: block; position: relative; margin-bottom: 10px; padding-left: 20px; margin-top:10px;}

.experience .list > li:before{ content: ''; position: absolute; top: 7px; left: 0; height: 10px;
width: 10px; display: block; border-radius: 10px; border: 2px solid #777; }

.exp {
	color: #777;
	background-color: #FFFFFF;
}

.exp img {
	margin-top: -20px;
	width: 82px;
}

h4 {
	color: #438644;
}

/* End Experience */

/* Footer */
.copyright{
	text-align: center; padding: 30px 0;
	background: #6441A5;  /* fallback for old browsers */
	background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
	background: #438644; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
	color: white;

}
/* End Footer */

